--- a/realtimeformvalidation/styles.css
+++ b/realtimeformvalidation/styles.css
@@ -1,3 +1,16 @@
+html, body {
+    font-family: Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.input-wrapper {
+    margin-bottom: 10px;;
+}
+
+label {
+    display: inline-block;
+    min-width: 75px;
+}
+
 /* Modern CSS */
 .container {
     border: 5px solid limegreen;
@@ -12,3 +25,4 @@
     padding: 0 1em;
     margin: 0 auto;
 } */
+
