improve validation of email and password

--- a/realtimeformvalidation/styles.css
+++ b/realtimeformvalidation/styles.css
@@ -12,7 +12,7 @@ label {
 }
 
 /* Modern CSS */
-.container {
+.input-section {
     border: 5px solid limegreen;
     width: min(100% - 2rem, 600px);
     margin-inline: auto;
